--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ overflow-y: auto;
     margin: 0;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    font-family: 'Poppins', sans-serif;
   }
 
   body::-webkit-scrollbar {
