--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ overflow-y: auto;
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/QjCFMSK/images-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Mirajul islam</title>
 </head>
 <style>
   body {
