make some change in the code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<html lang="en" style='scroll-behavior: smooth; 
-scroll-snap-type: y mandatory; 
-overflow-y: auto;
-'>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
