skills section is done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mirajul islam</title>
 </head>
-<style>
+<!-- <style>
   body {
     margin: 0;
     scrollbar-width: none;
@@ -18,7 +18,7 @@
   body::-webkit-scrollbar {
     display: none;
   }
-</style>
+</style> -->
 
 <body>
   <div id="root"></div>
