--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/QjCFMSK/images-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Battambang:wght@100;300;400;700;900&family=Boogaloo&family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Francois+One&family=Inter:wght@100..900&display=swap"
+    rel="stylesheet">
   <title>Mirajul islam</title>
 </head>
 <!-- <style>
