--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Battambang:wght@100;300;400;700;900&family=Boogaloo&family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Francois+One&family=Inter:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Battambang:wght@100;300;400;700;900&family=Boogaloo&family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Francois+One&family=Inter:wght@100..900&family=Koulen&display=swap"
     rel="stylesheet">
   <title>Mirajul islam</title>
 </head>
